appcds/sharedStrings/SharedStringsStress.java fails with 'GC triggered before VM initialization completed' error

XMLWordPrintable

    • b20

      In 11/07/18 tier5 testing, appcds/sharedStrings/SharedStringsStress.java failed with following error:

       stdout: [Allocated shared space: 3221225472 bytes at 0x0000000800000000
      Error occurred during initialization of VM
      GC triggered before VM initialization completed. Try increasing NewSize, current value 1331K.
      ];
       stderr: []
       exitValue = 1

      The error occurred at dump time with -XX:-CompactStrings:

      Running with extra VM option prefix for child processes [1] = -XX:-CompactStrings
      Command line: [.../bin/java -cp ... -Xshare:dump -XX:ExtraSharedClassListFile=.../SharedStringsStress.d/SharedStringsStress-test.classlist -XX:SharedArchiveFile=.../appcds-23h09m32s439.jsa -XX:-CompactStrings -XX:SharedArchiveConfigFile=.../SharedStringsStress_gen.txt

            Assignee:
            Jiangli Zhou
            Reporter:
            Jiangli Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: