8213563: appcds/sharedStrings/SharedStringsStress.java fails with 'GC triggered before VM initialization completed' error

Move MetaspaceShared::read_extra_data() call to the main MetaspaceShared::preload_and_dump() operation.

Reviewed-by: iklam